# AntiplagiarismApp

./: CMakeLists.txt  main.cpp
Algorythms/: CMakeLists.txt
Algorythms/include/: KGramGenerator.hpp  ModuloSelect.hpp  WinnowingSelect.hpp
Algorythms/src/: KGramGenerator.cpp  ModuloSelect.cpp  WinnowingSelect.cpp
Comparator/: CMakeLists.txt
Comparator/include/: Comparator.hpp  JsonBuilder.hpp
Comparator/src/: Comparator.cpp  JsonBuilder.cpp
FilePrep/: CMakeLists.txt
FilePrep/include/: Preformatter.hpp  Reader.hpp
FilePrep/src/: Preformatter.cpp  Reader.cpp
tests/: genHeatMap.py  genPlots.py  test.py  testBackup.py  testv2.py
